k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: energyplus-frontend
  name: energyplus-frontend
  namespace: energyplus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: energyplus-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: energyplus-frontend
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
            - name: VITE_BITRIX_HOOK_URL
              valueFrom:
                secretKeyRef:
                  name: energyplus
                  key: VITE_BITRIX_HOOK_URL
          image: energyplus-frontend
          imagePullPolicy: Always
          name: energyplus-frontend
          resources:
            limits:
              cpu: '2'
              memory: 1024Mi
            requests:
              cpu: 30m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      imagePullSecrets:
        - name: global-secret
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
