k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: energyplus-frontend
  namespace: energyplus
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: energyplus-frontend
  selector:
    app: energyplus-frontend
  sessionAffinity: None
  type: ClusterIP
